# future-agents

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Containerfile  INSOMNIA_API_GUIDE.md  IT-AGENTS-GUARDRAILS.md  Makefile  PODMAN-GUIDE.md  README.md  VIBE-CODER-GUIDE.md  claude-api-aws-lambda-guide.md  compose.yaml  mcp_server.py  pyproject.toml  token_saver.py
.claude/commands/: ask.md
.claude/hooks/: session-start.sh
.cursor/rules/: guardrails.mdc
.github/: copilot-instructions.md
.github/workflows/: agent-gatherer-worker.yml  ai-discovery-worker.yml  ai-repo-crawler.yml  ci.yml  code-improvement-worker.yml  guardrails.yml  pattern-discovery-worker.yml
.windsurf/: rules.md
agents/: agents_index.json  capability.json  knowledge.json  leadership_proofreader.json  master.json  monitoring.json  policy.json  process.json  security.json  skills.json
agents/voice/: voice-00001.yaml  voice-00002.yaml  voice-00003.yaml  voice-00004.yaml  voice-00005.yaml  voice-00006.yaml  voice-00007.yaml  voice-00008.yaml  voice-00009.yaml  voice-00010.yaml
config/: connective_config.yaml  default.json  guardrails_config.yaml  workers.json
examples/: demo.py  demo_documents.py  demo_learn.py  demo_master.py  demo_profiles.py
future_agents/: __init__.py  system.py
future_agents/agentic_synthesis/: __init__.py  adaptive_router.py  cognitive_swarm_agent.py  lifelong_memory.py  reflexion_loop.py  swarm_coordinator.py
future_agents/agents/: __init__.py  capability_agent.py  digital_worker_agent.py  knowledge_agent.py  master_agent.py  orchestrator_agent.py  pdf_agent.py  policy_agent.py  ppt_agent.py  process_agent.py  quality_assessor_agent.py  skills_agent.py  token_saver_agent.py  word_agent.py
future_agents/api/: __init__.py  loader.py  main.py  schemas.py
future_agents/capabilities/: __init__.py  learn.py  listen.py  speech.py
future_agents/core/: __init__.py  base_agent.py  events.py  orchestrator.py  registry.py  smart_agent.py
future_agents/definitions/: __init__.py  defined_agent.py  factory.py  loader.py  profile.py  schema.py
future_agents/infrastructure/: __init__.py  knowledge_store.py  metric_tracker.py  sync_engine.py
future_agents/mcp/: __init__.py  server.py
future_agents/models/: __init__.py  capability.py  feedback.py  knowledge.py  policy.py  process.py  skill.py
future_agents/patterns/: __init__.py  library.py  react.py  reflection.py  tool_registry.py
future_agents/voice/: __init__.py  sample_processor.py  voice_agent.py  voice_cloner.py  voice_profile.py  voice_registry.py  voice_scorer.py
future_agents/workers/: __init__.py  agent_gatherer_worker.py  ai_discovery_worker.py  base_worker.py  code_improvement_worker.py  knowledge_synthesis_worker.py  pattern_discovery_worker.py  scheduler.py
future_agents/workflows/: __init__.py  engine.py  models.py  store.py  templates.py
guardrails/: folder_validator.py  guardrails_engine.py  human_input_handler.py  package_manager.py  secrets_scanner.py
leadership_guides/: 01_elite_leadership_guide.md  02_communication_mastery_guide.md  03_project_success_blueprint.md  04_ai_agentic_team_adoption.md  05_frameworks_methods_compendium.md
scanning/: .env.example  __init__.py  config.py  crawler.py  html_parser.py  main.py  models.py  schema.sql  scraper_agent.py  snowflake_client.py
scanning/tests/: test_crawler.py  test_html_parser.py  test_models.py  test_scraper_agent.py
scripts/: ask.py  entrypoint.sh  generate_agents.py  install.sh  package_zip.py
scripts/ai_crawler/: crawl.py  eval_runner.py  idea_generator.py  repos.json
scripts/workers/: agent_gatherer.py  ai_discovery.py  code_improvement.py  knowledge_synthesis.py  pattern_discovery.py
skills/: combined_guardrails.yaml
static/: index.html
templates/agent-templates/: agent_template.yaml
templates/ci/: github-actions-guardrails.yml  gitlab-ci-guardrails.yml  pre-commit-guardrails.yaml
templates/project-structures/python-service/: .env.example  README.md  pyproject.toml
templates/skill-templates/: skill_template.yaml
tests/: conftest.py  test_agentic_synthesis.py  test_ai_crawler.py  test_all_agents.py  test_guardrails.py  test_patterns.py  test_token_saver.py  test_token_saver_standalone.py  test_workers.py
(+10022 files in other folders)
