[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "future-agents"
version = "0.1.0"
description = "Self-improving multi-agent system for organizational capability management"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-pptx>=0.6.23",
    "python-docx>=1.1.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
scanning = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "snowflake-connector-python>=3.6",
    "cryptography>=41.0",   # for Snowflake private-key auth
]

[project.scripts]
scan = "scanning.main:main"

[tool.setuptools.packages.find]
include = ["future_agents*", "scanning*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "scanning/tests"]
