[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "future-agents"
version = "0.1.0"
description = "Self-improving multi-agent system with agentic patterns, AI crawler, and IT agent roles"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml~=6.0",
    "packaging~=24.0",
    "python-pptx>=0.6.23",
    "python-docx>=1.1.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40.0",
]
api = [
    "fastapi~=0.111",
    "uvicorn[standard]~=0.30",
    "python-multipart~=0.0.9",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-xdist~=3.5",
    "pytest-cov~=5.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Document agents use lazy try/except imports for optional heavy deps
"future_agents/agents/pdf_agent.py" = ["F401"]
"future_agents/agents/ppt_agent.py" = ["F401"]
"future_agents/agents/word_agent.py" = ["F401"]
