[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-python-service"
version = "0.1.0"
description = "Python microservice — fill in your description"
requires-python = ">=3.11"
dependencies = [
    # Use compatible (~=) or caret (>=x,<y) ranges — NOT exact pins
    "fastapi~=0.111",
    "uvicorn[standard]~=0.30",
    "pydantic~=2.7",
    "pydantic-settings~=2.3",
    "sqlalchemy~=2.0",
    "alembic~=1.13",
    "asyncpg~=0.29",
    "redis~=5.0",
    "httpx~=0.27",
    "python-jose[cryptography]~=3.3",
    "passlib[bcrypt]~=1.7",
    "python-multipart~=0.0.9",
    "tenacity~=8.5",
    "structlog~=24.2",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.2",
    "pytest-asyncio~=0.23",
    "pytest-cov~=5.0",
    "httpx~=0.27",
    "factory-boy~=3.3",
    "ruff~=0.4",
    "mypy~=1.10",
    "pre-commit~=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "B", "C90", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
